# libtorch_samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_cu102.sh  build_cu90.sh  build_cu92.sh
datasets/: download_cifar10_bin.sh  download_mnist.sh  download_toxic_comment.sh
src/: main.cpp
src/data/: read_cifar10.cpp  read_cifar10.h  read_mnist.cpp  read_mnist.h  repr.cpp  repr.h
src/models/: conv_models.h  linear_models.h
